# tyvi

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  gcovr.cfg
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  _FORTIFY_SOURCE.hpp
docs/: build-system-options.md  build-system.md  pre-commit-hooks.md
src/: CMakeLists.txt  sample_library.c++  sample_library.h
src/tyvi/: actions.h  actions_ast.h  actions_eval.h  actions_list.h  algo.h  backend.h  containers.h  distributed_grid.h  dynamic_array_cpu.h  execution.h  iterators.h  mdgrid.h  mdgrid_buffer.h  mdgrid_work.cpp  mdgrid_work_cpu.cpp  mdgrid_work_hip.cpp  mdspan.h  sample_library.c++  sample_library.h  sstd.h  thrust_test.c++  thrust_test.h  tyvi_hello_world.c++  tyvi_hello_world.h
test/: CMakeLists.txt  constant_testing.c++  constant_testing.h  multirank_test_distributed_grid_relative_comm.c++  multirank_test_pika.c++  test_actions_ast.c++  test_actions_eval.c++  test_actions_lists.c++  test_algo.c++  test_algo_extended.c++  test_containers.c++  test_distributed_grid.c++  test_dynamic_array.c++  test_iterators.c++  test_mdgrid.c++  test_mdgrid_buffer.c++  test_mdgrid_buffer_component_spans.c++  test_mdgrid_buffer_cpu.c++  test_mdgrid_buffer_resize.c++  test_mdgrid_cpu.c++  test_mdgrid_work.c++  test_mdgrid_work_cpu.c++  test_sstd.c++  test_tyvi_compilation.c++  test_tyvi_compilation_hip.c++  test_unit_testing.c++  unit_testing.c++
